# handlers/searchEmployeeResourceSkillsAllRatingForHR/{CategoryId}.js
@@ -5,6 +5,6 @@ var searchEmployeeResourceSkillsAllRatingForHR = require('../../lib/searchEmploy
 module.exports = {
     get: function searchEmployeeResourceSkillsAllRatingForHR_get(req, res) {
         //res.json(repository.get(req.params['id']));
-        searchEmployeeResourceSkillsAllRatingForHR.searchEmployeeResourceSkillsAllRatingForHR(req,res,req.params['CategoryId'],req.params['SkillId'],req.params['Availability'])
+        searchEmployeeResourceSkillsAllRatingForHR.searchEmployeeResourceSkillsAllRatingForHR(req,res,req.params['CategoryId'],req.params['SkillId'],req.params['Rating'],req.params['Availability'])
     }    
 };
